--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
+    "vuex-class": "^0.3.2",
     "webtorrent": "^0.103.1"
   },
   "devDependencies": {
